5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1831_3179.log
== TEST (2019-06-13 16:48:58) 
-- CODE:
from numpy import*

v= eval(array(input("Insira o seu vetor:")))
cont= zeros(size(v))

for i in range(size(v)):
	if(v[i]==1):
		
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:00) 
-- CODE:
from numpy import*

v= eval(array(input("Insira o seu vetor:")))
cont= zeros(size(v))

for i in range(size(v)):
	if(v[i]==1):
		
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:49:00) 
-- CODE:
from numpy import*

v= eval(array(input("Insira o seu vetor:")))
cont= zeros(size(v))

for i in range(size(v)):
	if(v[i]==1):
		
		
-- EXECUTION TIME:
0.619901
-- ERROR:
  File "/home/codebench/codes/1831/3179/main.py", line 10
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:20) 
-- CODE:
from numpy import*

v= eval(array(input("Insira o seu vetor:")))
cont= zeros(size(v))

for i in range(size(v)):
	if(v[i]==1):
print(cont)
		
		
-- ERROR:
File "XXXX", line 8
    print(cont)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:28) 
-- CODE:
from numpy import*

v= eval(array(input("Insira o seu vetor:")))
cont= zeros(size(v))

for i in range(size(v)):
	if(v[i]==1):

print(cont)
		
		
-- ERROR:
File "XXXX", line 9
    print(cont)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:32) 
-- CODE:
from numpy import*

v= eval(array(input("Insira o seu vetor:")))
cont= zeros(size(v))



print(cont)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:57) 
-- CODE:
from numpy import*

v= eval(array(input("Insira o seu vetor:")))
cont= zeros(size(v), dtype=int)



print(cont)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:18) 
-- CODE:
from numpy import*

v= eval(array(input("Insira o seu vetor:")))
cont= zeros(v, dtype=int)



print(cont)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:46) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor:")))
cont= zeros(size(v), dtype=int)



print(cont)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:41) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor:")))
cont= zeros(size(v), dtype=int)


for i in range(size(v))
	if(v[i]==1):
		cont[-1]=v[i]
print(cont)
		
-- ERROR:
File "XXXX", line 7
    for i in range(size(v))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:44) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor:")))
cont= zeros(size(v), dtype=int)


for i in range(size(v)):
	if(v[i]==1):
		cont[-1]=v[i]
print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
